# aiida-kkr

./: .bumpversion.cfg  .codacy.yml  .gitignore  .pre-commit-config.yaml  .pylintrc  .readthedocs.yml  .travis.yml  .zenodo.json  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  TODOs.txt  id_rsa_travis.enc  pypi_credentials.enc  pyproject.toml  pytest.ini  requirements_aiida-core_1.5.txt  secrets.tar.gz.enc  setup.json  setup.py  setup_requirements.txt
.github/: dependabot.yml
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: cd.yml  ci.yml  requirements_aiida-core_1.6.4.txt
aiida_kkr/: __init__.py
aiida_kkr/calculations/: __init__.py  kkr.py  kkrcontrol.py  kkrimp.py  kkrimporter.py  kkrnano.py  kkrnano_before_different_input.py  voro.py
aiida_kkr/cmdline/: __init__.py  data_cli.py
aiida_kkr/cmdline/data/: __init__.py  parameters.py  structure.py
aiida_kkr/cmdline/launch/: __init__.py  launch.py
aiida_kkr/cmdline/util/: __init__.py  defaults.py  options.py  types.py  utils.py
aiida_kkr/cmdline/visualization/: __init__.py
aiida_kkr/data/: __init__.py  kkr_structure.py  kkrstructure.py  strucwithpot.py
aiida_kkr/parsers/: __init__.py  kkr.py  kkrimp.py  kkrimporter.py  kkrnano.py  kkrparser_functions.py  voro.py  voroparser_functions.py
aiida_kkr/tests/: .coveragerc  __init__.py  check_pika-rabbitmq.py  code_setup_kkr.txt  code_setup_voronoi.txt  computer_setup.txt  config.yml  conftest.py  dbsetup.py  helpers.py  jukkr_installation.sh  run.sh  run_all.sh  run_all_covhtml.sh  test_common_functions.py  test_common_workfunctions.py  test_common_workfunctions_with_rmq.py  test_dos_wc.py  test_entrypoints.py  test_gf_writeout_wc.py  test_kkr_parser.py  test_kkrcalc.py  test_kkrimp_full_wc.py  test_kkrimp_parser.py  test_kkrimp_sub_wc.py  test_kkrimp_tools.py  test_kkrimpcalc.py  test_kkrparams.py  test_kkrparser_functions.py  test_plot_kkr.py  test_scf_wc_simple.py  test_voro_caching.py  test_vorocalc.py  test_voronoi_parser.py  test_voroparser_functions.py  test_vorostart_wc.py  verify_rmq_check.py
aiida_kkr/tests/calculations/: test_kkrcalc.py  test_kkrimpcalc.py  test_vorocalc.py
aiida_kkr/tests/cmdline/: conftest.py  test_base_all_commands.py
aiida_kkr/tests/parsers/: test_kkr_parser.py  test_kkrimp_parser.py  test_voronoi_parser.py
aiida_kkr/tests/tools/: test_multi_imps_data_extract.py
aiida_kkr/tests/workflows/: dbsetup.py  nodes_for_imports.txt  test_bs_wc.py  test_combine_imps.py  test_dos_wc.py  test_eos.py  test_gf_writeout_wc.py  test_kkrimp_dos_wc.py  test_kkrimp_full_wc.py  test_kkrimp_sub_wc.py  test_scf_wc_simple.py  test_vorostart_wc.py
aiida_kkr/tools/: __init__.py  bdg_tools.py  combine_imps.py  common_functions.py  common_workfunctions.py  context.py  dict_util.py  extract_kkrhost_noco_angles.py  find_cluster_radius.py  find_parent.py  imp_cluster_tools.py  jij_tools.py  kick_out_core_states.py  kkr_params.py  kkrcontrol.py  kkrparser_functions.py  ldau.py  make_supercell.py  multi_imps_data_Extract.py  multi_imps_data_extract.py  neworder_potential.py  parse_dos.py  plot_kkr.py  save_output_nodes.py  test_kkrparams.py  tools_STM_scan.py  tools_kkrimp.py  voronoi_helper.py  voroparser_functions.py
aiida_kkr/workflows/: .nfs000000008df90ee900001eff  .nfs000000008eb72c8e00001ec5  .nfs000000008ec5666800001f0b  BandStructure_WF.py  Jij_step.ipynb  KKRnanoDOSChain.py  STM.py  __init__.py  _combine_imps.py  _decimation.py  _qpi.py  base_restart_calc.py  bs.py  check_magnetic_state.py  check_para_convergence.py  combined_imps_jij.ipynb  dos.py  eos.py  gf_writeout.py  host_BdG.py  imp_BdG.py  jij_step.py  jijs.py  kkr_STM.py  kkr_imp.py  kkr_imp_dos.py  kkr_imp_sub.py  kkr_scf.py  mag_init.py  voro_start.py
aiida_kkr/workflows/restart/: base_restart.py  restart_kkr.py  restart_kkrimp.py  restart_voro.py
docs/: requirements_for_rtd.txt  rtd_settings.py
docs/source/: conf.py  index.md  index.rst
docs/source/developer_guide/: index.md  index.rst
examples/: AiiDA-KKR_STM_Tutorial.ipynb  kkr_eos.py  kkr_plugins_scf_wc_test.ipynb  kkr_plugins_test.ipynb  kkr_submit_scf.py
examples/KKRnano_Tutorial/: 00_KKRnano_tutorial_basics.ipynb  01_KKRnano_tutorial_simple_calculation.ipynb  02_KKRnano_tutorial_continue_calculations.ipynb  03_KKRnano_tutorial_DOSworkchain.ipynb  04_KKRnano_tutorial_StrucWithPotData.ipynb  DOS_plot.py  ParseInput.py  example_Cu_input.conf
tests/: .aiida-test-cache-config.yml  check_pika-rabbitmq.py  codecov.yml  conftest.py  dbsetup.py  jukkr_installation.sh  list_aiida_imports.txt  migrate_exports.py  recreate_wf_test_files.sh  run_all.sh  test_common_workfunctions.py  test_common_workfunctions_with_rmq.py  test_entrypoints.py  test_kkrimp_tools.py  test_plot_kkr.py  verify_rmq_check.py
tests/calculations/: test_kkrcalc.py  test_kkrimpcalc.py  test_kkrnanocalc.py  test_vorocalc.py
tests/cmdline/: conftest.py
tests/data_dir/: bs_wc_Cu.aiida  decimate.aiida  decimate_bandstruc.aiida  decimate_dos.aiida  dos_wc_Cu.aiida  eos_wc_Cu_simple.aiida  jij.aiida  jij_soc.aiida  kkr_cached.aiida  kkr_increased_lmax.aiida  kkr_startpot_parent_KKR.aiida  kkr_startpot_wc_Cu.aiida  kkrflex_writeout_wc.aiida  kkrimp_cached.aiida  kkrimp_full_Ag_Cu_onsite.aiida  kkrimp_full_wc.aiida  kkrimp_sub_wc.aiida  scf_wc_Cu_simple.aiida  stm.aiida  voronoi_after_kkr.aiida  voronoi_cached.aiida
tests/files/: db_dump_KKRnano.aiida  deci_data.aiida  jij_input.aiida
tests/parsers/: test_kkr_parser.py  test_kkrimp_parser.py  test_kkrnano.py  test_voronoi_parser.py
tests/tools/: test_find_cluster_radius.py  test_find_parent.py  test_multi_imps_data_extract.py
tests/workflows/: nodes_for_imports.txt  test_bs_wc.py  test_combine_imps.py  test_decimate.py  test_dos_wc.py  test_eos.py  test_gf_writeout_wc.py  test_jij_wc.py  test_kkr_restart.py  test_kkrimp_BdG_wc.py  test_kkrimp_dos_wc.py  test_kkrimp_full_wc.py  test_kkrimp_restart.py  test_kkrimp_sub_wc.py  test_scf_wc_simple.py  test_stm.py  test_voro_restart.py  test_vorostart_wc.py
utils/: validate_version_consistency.py
(+117 files in other folders)
