[build-system]
requires = ["setuptools", "wheel"]

[tool.poetry]
name = "aiida-kkr"
version = "1.1.11-dev"
description = "AiiDA plugin for the KKR code"
authors = ["Philipp Rüssmann <p.ruessmann@fz-juelich.de>",
           "Jens Bröder <j.broeder@fz-juelich.de>",
           "Fabian Bertoldo <f.bertoldo@fz-juelich.de>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/JuDFTteam/aiida-kkr"
repository = "https://github.com/JuDFTteam/aiida-kkr"
documentation = "https://aiida-kkr.readthedocs.io"
keywords = ["material science",
            "aiida",
            "dft",
            "all-electron",
            "kkr"]
classifiers = ["Development Status :: 4 - Beta",
               "Intended Audience :: Science/Research",
               "License :: OSI Approved :: MIT License",
               "Programming Language :: Python :: 2.7",
               "Programming Language :: Python :: 3",
               "Programming Language :: Python :: 3.5",
               "Programming Language :: Python :: 3.6",
               "Programming Language :: Python :: 3.7",
               "Environment :: Plugins",
               "Natural Language :: English",
               "Topic :: Scientific/Engineering :: Physics",
               "Framework :: AiiDA"]

[tool.poetry.dependencies]
aiida-core = "^1.0.0b6"
python = "^2.7"
masci-tools = "^0.3.10"
seekpath = "*"
pgtest = "*"
pytest-cov = "^2.5.0"
pytest-mpl = "*"
pytest-timeout = "*"
sphinx = "*"
sphinx_rtd_theme = "*"
bumpversion = "*"
ase = "*"
